# steer

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_architecture.yml
.github/workflows/: ci.yml  release.yml
docs/plans/: audit-followups.md  logit-pass.md  loom.md  webui-overhaul.md
docs/superpowers/plans/: 2026-04-10-python-api.md
docs/superpowers/specs/: 2026-04-10-python-api-design.md
examples/: README.md  ab_compare.py  sweep_alpha.py
liahona/: __init__.py  __main__.py  cli.py  datasource.py  generation.py  hooks.py  model.py  monitor.py  probes_bootstrap.py  results.py  server.py  session.py  vectors.py
liahona/datasets/: agentic.json  calm.json  contextual.json  creative.json  deceptive.json  direct.json  disgusted.json  happy.json  hierarchical.json  paternal.json  refusal.json  religious.json  sad.json  traditional.json  uncertain.json
liahona/probes/: defaults.json
liahona/tui/: app.py  chat_panel.py  styles.tcss  trait_panel.py  utils.py  vector_panel.py
saklas/: __init__.py  __main__.py  _server_runner.py  cache_ops.py  cli.py  cli_selectors.py  cloning.py  config_file.py  datasource.py  generation.py  gguf_io.py  hf.py  hooks.py  merge.py  model.py  monitor.py  ollama_api.py  packs.py  paths.py  probes_bootstrap.py  results.py  server.py  session.py  vectors.py
saklas/cli/: AGENTS.md  CLAUDE.md  __init__.py  config_file.py  main.py  output.py  parsers.py  runners.py  selectors.py
saklas/core/: AGENTS.md  CLAUDE.md  cuda_graphs.py  errors.py  events.py  extraction.py  generation.py  histogram.py  hooks.py  joint_logprobs.py  loom.py  loom_diff.py  model.py  monitor.py  profile.py  results.py  sae.py  sampling.py  session.py  steering.py  steering_expr.py  transcript.py  tree_filter.py  triggers.py  vectors.py
saklas/data/: neutral_statements.json
saklas/data/vectors/agentic/: pack.json  scenarios.json  statements.json
saklas/data/vectors/angry/: pack.json  statements.json
saklas/data/vectors/angry.calm/: pack.json  scenarios.json  statements.json
saklas/data/vectors/authoritative/: pack.json  statements.json
saklas/data/vectors/authoritative.submissive/: pack.json  scenarios.json  statements.json
saklas/data/vectors/calm/: pack.json  statements.json
saklas/data/vectors/confident.uncertain/: pack.json  scenarios.json  statements.json
saklas/io/: AGENTS.md  CLAUDE.md  __init__.py  cache_ops.py  cloning.py  datasource.py  gguf_io.py  hf.py  merge.py  packs.py  paths.py  probes_bootstrap.py  selectors.py
saklas/notebook/: __init__.py  data.py
saklas/server/: AGENTS.md  CLAUDE.md  __init__.py  app.py  ollama.py  openai.py  saklas_api.py
saklas/tui/: AGENTS.md  CLAUDE.md  app.py  chat_panel.py  commands.py  loom_helpers.py  loom_screen.py  styles.tcss  trait_panel.py  utils.py  vector_panel.py
saklas/web/: AGENTS.md
scripts/: alpha_sweep_angry.py  alpha_sweep_open_ended.py  alpha_sweep_post_drop.py  build_bundled_data.py  compare_n_angry.py  pair_count_test.py  prototype_open_scenarios.py  regenerate_bundled_statements.py  upgrade_packs.py
steer/: cli.py  datasource.py  generation.py  hooks.py  model.py  monitor.py  probes_bootstrap.py  results.py  session.py  vectors.py
steer/datasets/: angry.json  authoritative.json  calm.json  casual-egalitarian.json  casual.json  communal.json  compliance.json  concise.json  confident.json  deceptive.json  disgusted.json  eastern-collectivist.json  excited.json  fearful.json  feminine-coded.json  formal-hierarchical.json  formal.json  hallucinating.json  happy.json  high-context.json  honest.json  indirect-communication.json  low-context.json  masculine-coded.json  masculine.json  maternal.json  paternal.json  progressive.json  religious.json  sad.json  secular.json  surprised.json  sycophantic.json  traditional.json  uncertain.json  verbose.json  western-individualist.json  western.json
steer/probes/: defaults.json
steer/tui/: app.py  chat_panel.py  styles.tcss  trait_panel.py  vector_panel.py
tests/: test_ablation.py  test_angular_hook.py  test_atomic.py  test_batch.py  test_cache_ops.py  test_canonical_name.py  test_cli_flags.py  test_cloning.py  test_config_file.py  test_cuda_graphs.py  test_datasource.py  test_diagnostics.py  test_dim_extraction.py  test_events.py  test_extraction_pipeline.py  test_format_version.py  test_generation.py  test_gguf_io.py  test_hf.py  test_hooks_triggers.py  test_joint_logprobs.py  test_logits.py  test_loom.py  test_loom_concurrency.py  test_loom_diff.py  test_loom_tui.py  test_mahalanobis.py  test_merge.py  test_model_loading.py  test_packs.py  test_paths.py  test_probe_gate.py  test_probes_bootstrap.py  test_profile.py  test_projection.py  test_recipe_override.py  test_results.py  test_sae.py  test_sae_lens_smoke.py  test_saklas_api.py  (+19 more)
webui/: README.md  package-lock.json
webui/src/: App.svelte
webui/src/drawers/: ActivationAtlasDrawer.svelte  AdvancedSamplingDrawer.svelte  CloneDrawer.svelte  CompareDrawer.svelte  CorrelationDrawer.svelte  ExperimentLabDrawer.svelte  ExportDrawer.svelte  HealthDrawer.svelte  HelpDrawer.svelte  LayerNormsDrawer.svelte  LoadConversationDrawer.svelte  LoadDrawer.svelte  MergeDrawer.svelte  ModelInfoDrawer.svelte  NodeCompareDrawer.svelte  PackDrawer.svelte  ProbePickerDrawer.svelte  RecipeBuilderDrawer.svelte  SaveConversationDrawer.svelte  SessionAdminDrawer.svelte  SystemPromptDrawer.svelte  TokenDrilldownDrawer.svelte  TranscriptDrawer.svelte  VectorPickerDrawer.svelte  _SearchableConceptList.svelte  index.ts
webui/src/lib/: Segmented.svelte  Slider.svelte  Toaster.svelte  api.ts  concepts.ts  stores.svelte.ts  tokens.ts  types.ts
webui/src/panels/: BranchCanvas.svelte  Chat.svelte  InspectorPanel.svelte  PendingBubbles.svelte  ProbeRack.svelte  ProbeStrip.svelte  SamplingStrip.svelte  StatusFooter.svelte  SteeringRack.svelte  Topbar.svelte  VectorStrip.svelte  WorkbenchCard.svelte  WorkspaceRail.svelte
(+125 files in other folders)
