[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saklas"
version = "1.1.0"
description = "Local activation steering + trait monitoring TUI for HuggingFace transformers"
readme = "README.md"
license = "AGPL-3.0-or-later"
authors = [{name = "a9lim", email = "mx@a9l.im"}]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Environment :: GPU :: NVIDIA CUDA",
]
dependencies = [
    "torch>=2.2",
    "transformers>=4.51",
    "accelerate>=0.27",
    "safetensors>=0.4",
    "textual>=0.50",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/a9lim/saklas"

[project.optional-dependencies]
bnb = ["bitsandbytes>=0.43"]
flash = ["flash-attn>=2.5"]
cuda = ["bitsandbytes>=0.43", "flash-attn>=2.5"]
dev = ["pytest>=8.0", "httpx>=0.27"]
serve = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
hf = ["datasets>=2.0"]
pandas = ["pandas>=2.0"]
research = ["datasets>=2.0", "pandas>=2.0"]

[project.scripts]
saklas = "saklas.cli:main"

[tool.setuptools.packages.find]
include = ["saklas*"]

[tool.setuptools.package-data]
saklas = [
    "data/**/*.json",
    "tui/*.tcss",
]
