[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saklas"
version = "1.4.0"
description = "Activation steering and trait monitoring for HuggingFace transformers — Python library, OpenAI-compatible server, and terminal UI"
readme = "README.md"
license = "AGPL-3.0-or-later"
authors = [{name = "a9lim", email = "mx@a9l.im"}]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Environment :: GPU :: NVIDIA CUDA",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "torch>=2.2",
    "transformers>=4.51",
    "accelerate>=0.27",
    "safetensors>=0.7.0",
    "textual>=0.50",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/a9lim/saklas"

[project.optional-dependencies]
bnb = ["bitsandbytes>=0.43"]
flash = ["flash-attn>=2.5"]
cuda = ["bitsandbytes>=0.43", "flash-attn>=2.5"]
dev = ["pytest>=8.0", "httpx>=0.27"]
serve = ["fastapi>=0.110", "uvicorn[standard]>=0.44.0"]
hf = ["datasets>=2.0"]
gguf = ["gguf>=0.10"]
pandas = ["pandas>=3.0.2"]
research = ["datasets>=2.0", "pandas>=3.0.2"]

[project.scripts]
saklas = "saklas.cli.main:main"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501", "E741", "E402", "E731"]

[tool.setuptools.packages.find]
include = ["saklas*"]

[tool.setuptools.package-data]
saklas = [
    "data/**/*.json",
    "tui/*.tcss",
]
